data: Fix dark mode album tiles
By default the Adwaita dark .tile has no transparent background, but in the
Music case it looks better that way.


(cherry picked from commit 4011eb91c387f09c2c914ffbb979fc6094f05afe)

--- a/data/application.css
+++ b/data/application.css
@@ -17,6 +17,11 @@ flowbox, treeview, widget {
     font-size: smaller;
 }
 
+/* By default in Adwaita dark this is not transparent */
+.tile {
+    background-color: transparent;
+}
+
 /* AlbumWidget */
 .title-artist {
     font-size: larger;
